# ZlsNasDisplay

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  IMPROVEMENTS.md  README.md  build-binary.sh  pyproject.toml  zlsnasdisplay.spec
.github/workflows/: pypi_publish.yml  release.yml  release_drafter.yml  testing.yml
tests/: conftest.py  test_display_controller.py  test_display_renderer.py  test_main.py  test_matter_device.py  test_network_operations.py  test_system_operations.py  test_version.py  test_web_dashboard.py
zlsnasdisplay/: __init__.py  __main__.py  config.py  display_config.py  display_controller.py  display_renderer.py  main.py  matter_device.py  network_operations.py  system_operations.py  web_dashboard.py
zlsnasdisplay/waveshare_epd/: epd2in9_V2.py  epdconfig.py
