[tool.poetry]
name = "zlsnasdisplay"
version = "1.0.2"
description = "Eink display manager"
authors = ["Ondrej Zalesky <o.zalesky@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^10.2.0"
gpiozero = "^2.0.1"
schedule = "^1.2.1"
psutil = ">=5.9.8,<7.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.10.0"
pre-commit = "3.7.1"
pytest = "8.2.2"
pytest-cov = "5.0.0"
ruff = "0.4.10"
tomli = {version = "2.0.1", python = "<3.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.poetry.scripts]
zlsnasdisplay = 'zlsnasdisplay:main.main()'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=zlsnasdisplay --cov-report term-missing --no-cov-on-fail"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]

[tool.ruff]
line-length = 100
target-version = "py38"
fix = true

[tool.ruff.lint]
select = ["E", "F", "UP", "I001", "T201", "T203"]
ignore=[
  # Recommended ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
